Added executeIncomingOrder and changed order book to price time priority